Optimize JSON codec (#1148)
* Better Json benchmarks

* Reuse JsonMapSerializer instance instead of allocating per writeMap()

* Override serialize() in JsonCodec with larger initial buffer

* Close deserializer in deserializeShape to enable Jackson buffer recycling

* Pre-compute SerializableString per Schema member for field name writes

* Cache resolved TimestampFormatter per Schema in UseTimestampFormatTrait

* Optimize fieldToMember cache with get-before-compute pattern

* Replace InterceptingSerializer with flat struct serializer

* Add Schema extension system with SPI and migrate JSON caches

* Use bounded recycler pool for Jackson buffer recycling

* Remove FAST_DOUBLE_WRITER

* Add some more thread safety guards in DeferredRootSchema

* Make Schema Extensions lazy

* Add a Smithy Json serializer and deserializer

* Remove publication guard

* Correctness fixes

* More perf improvements

* More perf improvements

* Improve timestamp serialization

* Use copy of Schubfach for direct conversion of Double/Float to byte

* Add SmithyJson to fuzz tests

* Use Arrays.equals in the fast path

* Use FastDoubleParser for direct byte-to-double parsing

* Reuse Schubfach DoubleToDecimal/FloatToDecimal instances

* Write ISO-8601 timestamps directly to byte buffer

* Fast-path BigInteger/BigDecimal when value fits in long

* Use parseLong for integer epoch-seconds timestamps

* Parse ISO-8601 and HTTP-date timestamps directly from bytes

* Write HTTP-date timestamps directly to byte buffer

* Localize pos to register in readStruct hot loop

* Fast-path BigDecimal with non-zero scale when unscaled fits in long

* Localize pos in readList and readStringMap hot loops

* Handle out-of-range epoch seconds in parseLong fast path

* Cleanup and add differential fuzzing

* More tests and correctness changes

* Codegen perf improvements

* Fuse speculative field name check with scan in readStruct

* Pool SmithyJsonSerializer to avoid per-call allocation

* Eliminate OffsetDateTi